<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SyncScreen</string>
    <string name="accessibility_service_description">允许远程控制此设备的屏幕触摸操作</string>
    <string name="create_room">创建房间</string>
    <string name="join_room">加入房间</string>
    <string name="room_id">房间ID</string>
    <string name="start_screen_share">开始屏幕共享</string>
    <string name="stop_screen_share">停止屏幕共享</string>
    <string name="start_video">开启视频</string>
    <string name="start_audio">开启语音</string>
    <string name="stop_media">停止</string>
    <string name="mute">静音</string>
    <string name="unmute">取消静音</string>
    <string name="enable_control">启用远程控制</string>
    <string name="disable_control">禁用远程控制</string>
    <string name="send_message">发送</string>
    <string name="message_hint">输入消息...</string>
    <string name="copy_room_id">复制房间ID</string>
    <string name="scan_qr">扫描二维码</string>
    <string name="show_qr">显示二维码</string>
    <string name="connection_status">连接状态</string>
    <string name="waiting">等待中...</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开</string>
</resources>
